src/css/filter.module.css
.dropbtn {
  background-color: white;
  color:#707070;
  font-size: 16px;
  border: 0px;
  border-right: gray 0.5px solid;
  padding-top:10px;
  padding-bottom: 10px;
  padding-left: 6px;
  width:7rem;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdownContent {
  display: none;
  position: absolute;
  background-color: white;
  width: 350px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.priceFilter  {
  padding-top: 20px;
}

.minmax {
  padding-left: 60px;
}

.p {
  padding-right: 270px;
}

/* Change color of dropdown links on hover */
.dropdown-content:hover {
  background-color: #ddd;
  display: block;

}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdownContent {
  display: block;
  
}

@media only screen and (max-width: 659px) 
{
 .dropbtn{
  width: 15rem;
  }
  
}

